Give MacViews renderer context menus an owner.

Menus need an owner to share key handling and for other reasons.

Make them owned in the same way as on other platforms.

TEST=With chrome://flags/#views-browser-windows on Mac, right-click on
WebContents, then press arrow-keys. Menu highlight should move up/down.

Bug: 845463
Change-Id: Ie3b578db1c2427b7e3367784f8a476b13c9104ed
Reviewed-on: https://chromium-review.googlesource.com/1080427
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563512}