chrome/browser/ui/cocoa/renderer_context_menu/render_view_context_menu_mac_views.mm
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/renderer_context_menu/views/toolkit_delegate_views.h"
 #import "ui/base/cocoa/cocoa_base_utils.h"
 #import "ui/gfx/mac/coordinate_conversion.h"
+#include "ui/views/widget/widget.h"
 
 class ToolkitDelegateViewsMac : public ToolkitDelegateViews {
  public:
@@ -47,6 +48,8 @@ void RenderViewContextMenuMacViews::Show() {
   gfx::Point menu_point = gfx::ScreenPointFromNSPoint(
       ui::ConvertPointFromWindowToScreen([parent_view_ window], position));
 
+  views::Widget* owner =
+      views::Widget::GetTopLevelWidgetForNativeView(parent_view_);
   static_cast<ToolkitDelegateViews*>(toolkit_delegate())
-      ->RunMenuAt(nullptr, menu_point, params().source_type);
+      ->RunMenuAt(owner, menu_point, params().source_type);
 }
